finish body project

--- a/index.html
+++ b/index.html
@@ -15,47 +15,122 @@
 
 <body>
     <header>
-        <h1 class="logo-principal"></h1>
+        <nav>
+            <h1><img class="BKH__logo" src="assents/logo-BKH.svg" alt="logo BKH"></h1>
+            <a class="BKH__wzp"
+                href="https://api.whatsapp.com/send?phone=5547992016231&text=Qual%20sua%20expectativa%20sobre%20investimento%20imobili%C3%A1rio%3F%20%0AEnt%C3%A3o%20Luciano%20...%20">WhatsApp</a>
+        </nav>
     </header>
 
     <main>
-        <section class="imoveis">
-            <h2 class="titulo-imoveis">Imoveis</h2>
-            <div class="img-imoveis">
-                <ul class="slides-imoveis">
-                    <li>
 
-                        <img class="img-imovel">
-                    </li>
-                    <li>
+        <section class="carbon__section">
+            <h2 class="tittle">CARBON Residence Tower</h2>
+            <ul class="carbon__slides">
+                <li>
+                    <dl class="carbon__aps">
+                        <dt class="subtittle">Apartamentos</dt>
+                        <dd>
+                            <ul>
+                                <li>70m2</li>
+                                <li>1 box individual</li>
+                                <li>1 vaga de garagem</li>
+                                <li>2 suítes com lavabo</li>
+                                <li>Sacada com churrasqueira</li>
+                                <li>Piso vinílico nas suítes</li>
+                                <li>Piso em porcelanato áreas convivência</li>
+                                <li>Espera para ar condicionado Split</li>
+                                <li>Acabamento em gesso</li>
+                                <li>Área de serviço</li>
+                                <li>Gás individual</li>
+                                <li>Água quente</li>
+                                <li>Lavabo</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                </li>
+                <li>
+                    <img class="carbon__ed " src="assents/ed-Carbon.jpeg" alt="edificio Carbon">
+                </li>
+                <li>
+                    <dl class="carbon__specs">
+                        <dt class="subtittle">Excelente localização</dt>
+                        <dd>
+                            <ul>
+                                <li>Farmácia <span>1 min</span></li>
+                                <li>Panificadora <span>na frente</span></li>
+                                <li>Posto gasolina <span>1 min</span></li>
+                                <li>Koch Atacadista <span>2 min</span></li>
+                                <li>Koch Supermercado <span>3 min</span></li>
+                                <li>Shopping calçadão <span>4 min</span></li>
+                                <li>Unidade saúde <span>4 min</span></li>
+                                <li>Praia <span>4 min</span></li>
+                                <li>Bancos <span>5 min</span></li>
+                            </ul>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+        </section>
 
-                        <img class="img-imovel">
-                    </li>
-                    <li>
-                        <img class="img-imovel">
-                    </li>
-                </ul>
-
-            </div>
+        <section class="carbon__section">
+            <h2 class="tittle">VALE DO SILÍCIO Residence & Business</h2>
+            <ul class="carbon__slides vale__slides">
+                <li>
+                    <dl class="carbon__aps">
+                        <dt class="subtittle">Apartamentos</dt>
+                        <dd>
+                            <ul>
+                                <li>70m2</li>
+                                <li>1 box individual</li>
+                                <li>1 ou 2 vagas de garagem</li>
+                                <li>2 suítes com lavabo <br> ou 3 quartos, sendo 1 suíte</li>
+                                <li>Piso em porcelanato <br> áreas convivência</li>
+                                <li>Espera para ar condicionado Split</li>
+                                <li>Sacada com churrasqueira</li>
+                                <li>Piso vinílico nas suítes</li>
+                                <li>Acabamento em gesso</li>
+                                <li>Área de serviço</li>
+                                <li>Gás individual</li>
+                                <li>Água quente</li>
+                                <li>Lavabo</li>
+                            </ul>
+                        </dd>
+                        
+                    </dl>
+                </li>
+                <li>
+                    <img class="carbon__ed vale" src="assents/ed-Vale.jpeg" alt="edificio vale">
+                </li>
+                <li>
+                    <dl class="carbon__specs">
+                        <dt class="subtittle">Excelente localização</dt>
+                        <dd>
+                            <ul>
+                                <li>Fórum da Comarca <span>em frente</span></li>
+                                <li>Novo hospital municipal <span>1 min</span></li>
+                                <li>Supermercado Koch <span>1 min</span></li>
+                                <li>Prefeitura de Itapema <span>3 min</span></li>
+                            </ul>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
         </section>
 
 
-        <section class="about">
-            <h3 class="about-tittle">Sobre Mim</h3>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eligendi sequi accusamus, deleniti
-                recusandae eveniet cupiditate possimus ducimus ab dolores molestias, in iste aliquid quo explicabo rem.
-                Ipsam, corporis eligendi?
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem quaerat explicabo ratione esse
-                architecto sint ducimus molestias minus. Commodi aut quia animi maiores assumenda molestiae iusto
-                doloribus, eos perspiciatis eum?
-                lorem</p>
-        </section>
+        
     </main>
 
     <footer>
-        <a href="http://instagram.com/olucianobueno?igshid=ZWlzMWE5ZmU3Zg==">Instagram</a>
-        <a href="wa.link/6s1jx9">WhatsApp</a>
+        <section class="about__section">
+            <h3 class="subtittle_about">Sobre Nós</h3>
+
+            <p class="about__text">Somos uma empresa imobiliaria fundada a 2 anos atrás pelo nosso atual CEO Luciano Bueno com o objetivo de realizar os sonhos dos nossos clientes, por um preço justo e honesto!
+            </p>
+        </section>
+        <a class="insta" href="http://instagram.com/olucianobueno?igshid=ZWlzMWE5ZmU3Zg==">Instagram</a>
+
 
         <p class="copyright">&copy; Copyright Imobiliary Hive Kings - 2023</p>
     </footer>
