--- a/index.html
+++ b/index.html
@@ -23,113 +23,50 @@
     </header>
 
     <main>
-
         <section class="carbon__section">
             <h2 class="tittle">CARBON Residence Tower</h2>
             <ul class="carbon__slides">
-                <li>
-                    <dl class="carbon__aps">
-                        <dt class="subtittle">Apartamentos</dt>
-                        <dd>
-                            <ul>
-                                <li>70m2</li>
-                                <li>1 box individual</li>
-                                <li>1 vaga de garagem</li>
-                                <li>2 suítes com lavabo</li>
-                                <li>Sacada com churrasqueira</li>
-                                <li>Piso vinílico nas suítes</li>
-                                <li>Piso em porcelanato áreas convivência</li>
-                                <li>Espera para ar condicionado Split</li>
-                                <li>Acabamento em gesso</li>
-                                <li>Área de serviço</li>
-                                <li>Gás individual</li>
-                                <li>Água quente</li>
-                                <li>Lavabo</li>
-                            </ul>
-                        </dd>
-                    </dl>
+                <li class="carbon__ed">
+                    <img class="carbon__ed__img" src="assents/ed-Carbon.jpeg" alt="edificio Carbon">
                 </li>
-                <li>
-                    <img class="carbon__ed " src="assents/ed-Carbon.jpeg" alt="edificio Carbon">
-                </li>
-                <li>
-                    <dl class="carbon__specs">
+                <li class="carbon__specs">
+                    <dl class="carbon__specs__loc">
                         <dt class="subtittle">Excelente localização</dt>
                         <dd>
                             <ul>
-                                <li>Farmácia <span>1 min</span></li>
-                                <li>Panificadora <span>na frente</span></li>
-                                <li>Posto gasolina <span>1 min</span></li>
-                                <li>Koch Atacadista <span>2 min</span></li>
-                                <li>Koch Supermercado <span>3 min</span></li>
-                                <li>Shopping calçadão <span>4 min</span></li>
-                                <li>Unidade saúde <span>4 min</span></li>
-                                <li>Praia <span>4 min</span></li>
-                                <li>Bancos <span>5 min</span></li>
+                                <li>Panificadora na frente</li>
+                                <li>Farmácia 1 min</li>
+                                <li>Koch Atacadista 2 min</li>
+                                <li>Shopping calçadão 4 min</li>
+                                <li>Praia 4 min</li>
+                                <li>Bancos 5 min</li>
                             </ul>
                         </dd>
-                    </dl>
-                </li>
-            </ul>
-        </section>
-
-        <section class="carbon__section">
-            <h2 class="tittle">VALE DO SILÍCIO Residence & Business</h2>
-            <ul class="carbon__slides vale__slides">
-                <li>
-                    <dl class="carbon__aps">
                         <dt class="subtittle">Apartamentos</dt>
                         <dd>
                             <ul>
-                                <li>70m2</li>
-                                <li>1 box individual</li>
                                 <li>1 ou 2 vagas de garagem</li>
-                                <li>2 suítes com lavabo <br> ou 3 quartos, sendo 1 suíte</li>
-                                <li>Piso em porcelanato <br> áreas convivência</li>
-                                <li>Espera para ar condicionado Split</li>
-                                <li>Sacada com churrasqueira</li>
-                                <li>Piso vinílico nas suítes</li>
-                                <li>Acabamento em gesso</li>
-                                <li>Área de serviço</li>
-                                <li>Gás individual</li>
-                                <li>Água quente</li>
-                                <li>Lavabo</li>
-                            </ul>
-                        </dd>
-                        
-                    </dl>
-                </li>
-                <li>
-                    <img class="carbon__ed vale" src="assents/ed-Vale.jpeg" alt="edificio vale">
-                </li>
-                <li>
-                    <dl class="carbon__specs">
-                        <dt class="subtittle">Excelente localização</dt>
-                        <dd>
-                            <ul>
-                                <li>Fórum da Comarca <span>em frente</span></li>
-                                <li>Novo hospital municipal <span>1 min</span></li>
-                                <li>Supermercado Koch <span>1 min</span></li>
-                                <li>Prefeitura de Itapema <span>3 min</span></li>
+                                <li>2 suítes com lavabo ou 3 quartos, sendo 1 suíte</li>
+                                <li>70m2</li>
                             </ul>
                         </dd>
                     </dl>
                 </li>
+
             </ul>
+
         </section>
-
-
-        
     </main>
 
     <footer>
         <section class="about__section">
             <h3 class="subtittle_about">Sobre Nós</h3>
 
-            <p class="about__text">Somos uma empresa imobiliaria fundada a 2 anos atrás pelo nosso atual CEO Luciano Bueno com o objetivo de realizar os sonhos dos nossos clientes, por um preço justo e honesto!
+            <p class="about__text">Somos uma empresa imobiliaria fundada a 2 anos atrás pelo nosso atual CEO Luciano
+                Bueno com o objetivo de realizar os sonhos dos nossos clientes, por um preço justo e honesto!
             </p>
         </section>
-        <a class="insta" href="http://instagram.com/olucianobueno?igshid=ZWlzMWE5ZmU3Zg==">Instagram</a>
+
 
 
         <p class="copyright">&copy; Copyright Imobiliary Hive Kings - 2023</p>
