--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <header>
         <nav>
             <h1><img class="BKH__logo" src="assents/logo-BKH.svg" alt="logo BKH"></h1>
-            <a class="BKH__wzp"
-                href="https://api.whatsapp.com/send?phone=5547992016231&text=Qual%20sua%20expectativa%20sobre%20investimento%20imobili%C3%A1rio%3F%20%0AEnt%C3%A3o%20Luciano%20...%20">WhatsApp</a>
         </nav>
     </header>
 
@@ -34,28 +32,59 @@
                         <dt class="subtittle">Excelente localização</dt>
                         <dd>
                             <ul>
-                                <li>Panificadora na frente</li>
-                                <li>Farmácia 1 min</li>
-                                <li>Koch Atacadista 2 min</li>
-                                <li>Shopping calçadão 4 min</li>
-                                <li>Praia 4 min</li>
-                                <li>Bancos 5 min</li>
+                                <li>Panificadora <strong>na frente</strong></li>
+                                <li>Farmácia <strong>1 min</strong></li>
+                                <li>Koch Atacadista <strong>2 min</strong></li>
+                                <li>Shopping calçadão <strong>4 min</strong></li>
+                                <li>Praia <strong>4 min</strong></li>
+                                <li>Bancos <strong>5 min</strong></li>
                             </ul>
                         </dd>
                         <dt class="subtittle">Apartamentos</dt>
                         <dd>
                             <ul>
-                                <li>1 ou 2 vagas de garagem</li>
-                                <li>2 suítes com lavabo ou 3 quartos, sendo 1 suíte</li>
-                                <li>70m2</li>
+                                <li><strong>2</strong> suítes com lavabo ou <strong>3</strong> quartos, sendo <strong>1</strong> suíte</li>
+                                <li><strong>1</strong> ou <strong>2</strong> vagas de garagem</li>
+                                <li><strong>70m2</strong></li>
                             </ul>
                         </dd>
                     </dl>
                 </li>
-
             </ul>
-
         </section>
+        <section class="carbon__section">
+            <h2 class="tittle">CARBON Residence Tower</h2>
+            <ul class="carbon__slides">
+                <li class="carbon__ed">
+                    <img class="carbon__ed__img" src="assents/ed-Vale.jpeg" alt="edificio Carbon">
+                </li>
+                <li class="carbon__specs">
+                    <dl class="carbon__specs__loc">
+                        <dt class="subtittle">Excelente localização</dt>
+                        <dd>
+                            <ul>
+                                <li>Panificadora <strong>na frente</strong></li>
+                                <li>Farmácia <strong>1 min</strong></li>
+                                <li>Koch Atacadista <strong>2 min</strong></li>
+                                <li>Shopping calçadão <strong>4 min</strong></li>
+                                <li>Praia <strong>4 min</strong></li>
+                                <li>Bancos <strong>5 min</strong></li>
+                            </ul>
+                        </dd>
+                        <dt class="subtittle">Apartamentos</dt>
+                        <dd>
+                            <ul>
+                                <li><strong>2</strong> suítes com lavabo ou <strong>3</strong> quartos, sendo <strong>1</strong> suíte</li>
+                                <li><strong>1</strong> ou <strong>2</strong> vagas de garagem</li>
+                                <li><strong>70m2</strong></li>
+                            </ul>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+        </section>
+        <a class="BKH__wzp"
+            href="https://api.whatsapp.com/send?phone=5547992016231&text=Qual%20sua%20expectativa%20sobre%20investimento%20imobili%C3%A1rio%3F%20%0AEnt%C3%A3o%20Luciano%20...%20">WhatsApp</a>
     </main>
 
     <footer>
