recreating website for landingpage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
-<!-- amarelo preto -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <h1><img src="assents/Business King Hive - All Black.svg" alt="" srcset=""></h1>
+    </header>
+    <main>
+        <h2>Seu sonho de morar na praia a um clique</h2>
+        <a class="btn" href="https://api.whatsapp.com/send?phone=5547992016231&text=Ol%C3%A1!%20Seja%20bem-vindo!!!!%0AMeu%20nome%20%C3%A9%20Luciano%20Bueno%20creci%2044777%20%0ACeo%20e%20fundador%20*King%20Hive%20Business*%0AEstou%20aqui%20pra%20lhe%20auxiliar%20na%20compra%20do%20seu%20im%C3%B3vel%20na%20praia...%20">o click</a>
+    </main>
+</body>
+
+</html>
+
+
+
+
+
+<!-- amarelo preto
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -83,8 +111,7 @@
                 </li>
             </ul>
         </section>
-        <a class="BKH__wzp"
-            href="https://api.whatsapp.com/send?phone=5547992016231&text=Qual%20sua%20expectativa%20sobre%20investimento%20imobili%C3%A1rio%3F%20%0AEnt%C3%A3o%20Luciano%20...%20">WhatsApp</a>
+        
     </main>
 
     <footer>
@@ -102,4 +129,4 @@
     </footer>
 </body>
 
-</html>
+</html> -->
