--- a/index.html
+++ b/index.html
@@ -11,122 +11,25 @@
 </head>
 
 <body>
-    <header>
-        <h1><img src="assents/Business King Hive - All Black.svg" alt="" srcset=""></h1>
-    </header>
     <main>
-        <h2>Seu sonho de morar na praia a um clique</h2>
-        <a class="btn" href="https://api.whatsapp.com/send?phone=5547992016231&text=Ol%C3%A1!%20Seja%20bem-vindo!!!!%0AMeu%20nome%20%C3%A9%20Luciano%20Bueno%20creci%2044777%20%0ACeo%20e%20fundador%20*King%20Hive%20Business*%0AEstou%20aqui%20pra%20lhe%20auxiliar%20na%20compra%20do%20seu%20im%C3%B3vel%20na%20praia...%20">o click</a>
+        <div class="container">
+            <h1>
+                <img src="assents/King Hive Business - All Black.svg" alt="logo Business King Hive">
+            </h1>
+        </div>
+        <aside>
+            <h2>Seu sonho de morar na praia a um clique</h2>
+            <ul>
+                <li>
+                    <a class="btn"
+                        href="https://api.whatsapp.com/send?phone=5547992016231&text=Ol%C3%A1!%20Seja%20bem-vindo!!!!%0AMeu%20nome%20%C3%A9%20Luciano%20Bueno%20creci%2044777%20%0ACeo%20e%20fundador%20*King%20Hive%20Business*%0AEstou%20aqui%20pra%20lhe%20auxiliar%20na%20compra%20do%20seu%20im%C3%B3vel%20na%20praia...%20">whatsapp</a>
+                </li>
+                <li>
+                    <a class="btn" href="https://www.facebook.com/olucianobueno">facebook</a>
+                </li>
+            </ul>
+        </aside>
     </main>
 </body>
 
 </html>
-
-
-
-
-
-<!-- amarelo preto
-
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Business King Hive</title>
-    <link rel="shortcut icon" href="assents/Icon-BKH.png" type="image/x-icon">
-    <Link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <header>
-        <nav>
-            <h1><img class="BKH__logo" src="assents/logo-BKH.svg" alt="logo BKH"></h1>
-        </nav>
-    </header>
-
-    <main>
-        <section class="carbon__section">
-            <h2 class="tittle">CARBON Residence Tower</h2>
-            <ul class="carbon__slides">
-                <li class="carbon__ed">
-                    <img class="carbon__ed__img" src="assents/ed-Carbon.jpeg" alt="edificio Carbon">
-                </li>
-                <li class="carbon__specs">
-                    <dl class="carbon__specs__loc">
-                        <dt class="subtittle">Excelente localização</dt>
-                        <dd>
-                            <ul>
-                                <li>Panificadora <strong>na frente</strong></li>
-                                <li>Farmácia <strong>1 min</strong></li>
-                                <li>Koch Atacadista <strong>2 min</strong></li>
-                                <li>Shopping calçadão <strong>4 min</strong></li>
-                                <li>Praia <strong>4 min</strong></li>
-                                <li>Bancos <strong>5 min</strong></li>
-                            </ul>
-                        </dd>
-                        <dt class="subtittle">Apartamentos</dt>
-                        <dd>
-                            <ul>
-                                <li><strong>2</strong> suítes com lavabo ou <strong>3</strong> quartos, sendo <strong>1</strong> suíte</li>
-                                <li><strong>1</strong> ou <strong>2</strong> vagas de garagem</li>
-                                <li><strong>70m2</strong></li>
-                            </ul>
-                        </dd>
-                    </dl>
-                </li>
-            </ul>
-        </section>
-        <section class="carbon__section">
-            <h2 class="tittle">CARBON Residence Tower</h2>
-            <ul class="carbon__slides">
-                <li class="carbon__ed">
-                    <img class="carbon__ed__img" src="assents/ed-Vale.jpeg" alt="edificio Carbon">
-                </li>
-                <li class="carbon__specs">
-                    <dl class="carbon__specs__loc">
-                        <dt class="subtittle">Excelente localização</dt>
-                        <dd>
-                            <ul>
-                                <li>Panificadora <strong>na frente</strong></li>
-                                <li>Farmácia <strong>1 min</strong></li>
-                                <li>Koch Atacadista <strong>2 min</strong></li>
-                                <li>Shopping calçadão <strong>4 min</strong></li>
-                                <li>Praia <strong>4 min</strong></li>
-                                <li>Bancos <strong>5 min</strong></li>
-                            </ul>
-                        </dd>
-                        <dt class="subtittle">Apartamentos</dt>
-                        <dd>
-                            <ul>
-                                <li><strong>2</strong> suítes com lavabo ou <strong>3</strong> quartos, sendo <strong>1</strong> suíte</li>
-                                <li><strong>1</strong> ou <strong>2</strong> vagas de garagem</li>
-                                <li><strong>70m2</strong></li>
-                            </ul>
-                        </dd>
-                    </dl>
-                </li>
-            </ul>
-        </section>
-        
-    </main>
-
-    <footer>
-        <section class="about__section">
-            <h3 class="subtittle_about">Sobre Nós</h3>
-
-            <p class="about__text">Somos uma empresa imobiliaria fundada a 2 anos atrás pelo nosso atual CEO Luciano
-                Bueno com o objetivo de realizar os sonhos dos nossos clientes, por um preço justo e honesto!
-            </p>
-        </section>
-
-
-
-        <p class="copyright">&copy; Copyright Imobiliary Hive Kings - 2023</p>
-    </footer>
-</body>
-
-</html> -->
